kubernetes-p2/p1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: husker-p1
  namespace: ikenos-teamos
  labels: 
    app: husker-p1
spec:
  selector: 
    matchLabels:
      app: husker-p1
  replicas: 1
  template:
    metadata:
      labels:
        app: husker-p1
    spec:
      volumes:
        - name: config
          configMap:
            name: fluent-conf
      containers:
      - name: fluentd
        ports:
        - containerPort: 24224
        image: grafana/fluent-plugin-loki:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: husker-project1
        image: huskerhayes/ikenos-teamos:latest
        ports:
        - containerPort: 8090 
        imagePullPolicy: IfNotPresent
