kubernetes-p2/p2-canary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ikenos-teamos-canary
  namespace: ikenos-teamos
  labels:
    app: ikenos-teamos
spec:
  selector:
    matchLabels:
      app: ikenos-teamos
      track: canary
  replicas: 0
  template:
    metadata:
      labels:
        app: ikenos-teamos
        track: canary
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        ports:
        - containerPort: 24224
        image: grafana/fluent-plugin-loki:latest
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: ikenos-teamos
        ports:
        - containerPort: 8080
        image: huskerhayes/ikenos-teamos
