kubernetes-p2/p2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ikenos-teamos
  namespace: ikenos-teamos
  labels: 
    app: ikenos-teamos
spec:
  selector: 
    matchLabels:
      app: ikenos-teamos
  replicas: 1
  template:
    metadata:
      labels:
        app: ikenos-teamos
    spec:
      volumes:
        - name: config
          configMap:
            name: fluent-conf
      containers:
      - name: fluentd
        ports:
        - containerPort: 24224
        image: grafana/fluent-plugin-loki:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: ikenos-teamos
        image: huskerhayes/ikenos-teamos
        ports:
        - containerPort: 8080 
        imagePullPolicy: IfNotPresent
