kubernetes-p2/p1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: husker-p1
  namespace: ikenos-teamos
spec:
  selector:
    app: husker-p1
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
