kubernetes-p2/p2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ikenos-teamos
  namespace: ikenos-teamos
spec:
  selector:
    app: ikenos-teamos
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
