kubernetes-p2/p2-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ikenos-teamos
  namespace: ikenos-teamos
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /ikenos-teamos/?(.*)
        backend:
          serviceName: ikenos-teamos
          servicePort: 8080
